--- a/tribute-page/tpstyles.css
+++ b/tribute-page/tpstyles.css
@@ -7,12 +7,12 @@
 }
 
 body {
-  border: 5px solid yellow;
+  /* border: 5px solid yellow; */
   margin: 0;
 }
 
 header {
-  border: 10px solid #e4e4;
+  /* border: 10px solid #e4e4; */
   width: 100%;
   height: 100px;
   display: flex;
@@ -34,8 +34,7 @@ a {
 
 #logo {
   width: max(5.5rem, 5vw);
-  color: #e4e449;
-  background-color: blue;
+  color: purple;
   padding: 15px;
   font-size: min(3vw, 1.2em);
 }
@@ -57,19 +56,20 @@ nav ul {
 }
 
 nav ul li {
-  border: 3px solid red;
+  /* border: 3px solid red; */
   margin: 0.2rem;
   padding: 0.2rem;
   display: block;
 }
 
 nav ul li:hover {
-  border: 3px solid blue;
+  /* border: 3px solid blue; */
   color: white;
 }
 
 li a {
  font-size: min(3vw, 1em);
+ color: purple;
 }
 
 li a:hover {
@@ -79,7 +79,7 @@ li a:hover {
 #main {
   display: block;
   justify-content: center;
-  border: 10px solid white;
+  /* border: 10px solid white; */
   max-width: 100%;
 }
 
@@ -93,9 +93,13 @@ li a:hover {
 }
 
 section {
-  border: 5px solid orange;
+  /* border: 5px solid orange; */
   display: flex;
   justify-content: center;
+}
+
+#main #title {
+  padding-bottom: 30px;
 }
 
 #about {
@@ -104,8 +108,8 @@ section {
   margin: 0 auto;
 }
 
-#img-caption {
-  border: 5px solid gray;
+#description {
+  /* border: 5px solid gray; */
   background-color: transparent;
   padding: 10px 20px;
 
@@ -113,19 +117,24 @@ section {
 
 figure {
   display: inline-block;
-  border: 3px solid white;
+  /* border: 3px solid white; */
   margin: 0;
 }
 
 #image {
-  border: 5px solid red;
+  /* border: 5px solid red; */
   max-width: 100%;
   height: auto;
   display: block;
 }
 
+#img-caption {
+  text-align: start;
+  font-size: 0.653rem;
+}
+
 h2 {
-  border: 4px solid green;
+  /* border: 4px solid green; */
   margin-top: 0;
 }
 
@@ -140,7 +149,7 @@ h2 {
 }
 
 #tribute-info {
-  border: 5px solid blue;
+  /* border: 5px solid blue; */
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -169,6 +178,7 @@ section #tribute-info {
 
 #personage h2 {
   text-align: center;
+  padding-top: 30px;
 }
 
 #gallery {
@@ -180,7 +190,7 @@ section #tribute-info {
   gap: 16px;
   max-width: 900px;
   margin: 0 auto;
-  padding: 20px 10px;
+  padding: 0 0px 20px 0;
 }
 
 #gallery .card-box {
@@ -204,10 +214,6 @@ section #tribute-info {
   border-radius: 5px;
 }
 
-/* .card-box img {
-
-} */
-
 .card-title, .card-title a {
   text-align: center;
   padding: 8px;
@@ -222,298 +228,59 @@ section #tribute-info {
 
 #legacy {
   display: block;
-  text-align: center;
+  text-align: left;
+  margin: 0 auto;
 }
 
-#legacy-icons {
+#legacy h2 {
+  width: 100%;
+  text-align: center;
+  padding-top: 20px;
+}
+
+#legacy-description {
+  margin: 0 auto;
+  padding: 0;
+}
+
+#legacy-description h3 {
+  /* border: 5px solid white; */
+  margin: 0;
+  padding: 0;
+}
+
+#legacy-description ul {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  padding-inline-start: 0;
+  padding: 0;
+  /* border: 5px solid yellow; */
+  width: 100%;
+  max-width: 650px;
+  font-size: 0.75rem;
+  height: 100%;
+  list-style-type: none;
+  text-align: justify;
+  margin: 0 auto;
 }
 
-#legacy-icons img {
-  width: 10%;
-  max-width: 200px;
+#legacy-description ul li {
+  padding: 10px 0;
+  width: 100%;
 }
 
+#legacy-description ul li span {
+  width: 100%;
+}
 
-/* 
-THIS SECTION IS A CHEAT SHEET FOR THE CSS
+#legacy-description ul li h3 {
+ width: 100%;
+ padding: 8px;
+ padding-inline-start: 0;
+ margin: 0;
+}
 
-@media (prefers-reduced-motion:no-preference) {
-  body {
-    scroll-behavior: smooth
-  }
-} 
-
-* {
-    box-sizing: border-box;
-    background-color: pink;
-  }
-  
-  body {
-    margin: 0;
-  }
-  
-  img {
-    display: block;
-  }
-  
-  #image {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  #gallery {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 20px 10px;
-  }
-  
-  #gallery img {
-    width: 50%;
-    max-width: 200px;
-    padding: 10px;
-    margin: 10px;
-  }
-  
-  #gallery div {
-    flex-grow: 1;
-    width: 33%;
-    height: 100px;
-  }
-  
-* {
-    scroll-behavior: smooth;
-  }
-  
-  body {
-    background: #f5f6f7;
-    color: #1b1b32;
-    font-family: Helvetica;
-    margin: 0;
-  }
-  
-  header {
-    width: 100%;
-    height: 50px;
-    background-color: #1b1b32;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    top: 0;
-  }
-  
-  #logo {
-    width: max(10rem, 18vw);
-    background-color: #0a0a23;
-    aspect-ratio: 35 / 4;
-    padding: 0.4rem;
-  }
-  
-  h1 {
-    color: #f1be32;
-    font-size: min(5vw, 1.2em);
-    text-align: center;
-  }
-  
-  nav {
-    width: 50%;
-    max-width: 300px;
-    height: 50px;
-  }
-  
-  nav > ul {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-items: center;
-    padding-inline-start: 0;
-    margin-block: 0;
-    height: 100%;
-  }
-  
-  nav > ul > li {
-    color: #dfdfe2;
-    margin: 0 0.2rem;
-    padding: 0.2rem;
-    display: block;
-  }
-  
-  nav > ul > li:hover {
-    background-color: #dfdfe2;
-    color: #1b1b32;
-    cursor: pointer;
-  }
-  
-  li > a {
-    color: inherit;
-    text-decoration: none;
-  }
-  
-  main {
-    padding-top: 50px;
-  }
-  
-  section {
-    width: 80%;
-    margin: 0 auto 10px auto;
-    max-width: 600px;
-  }
-  
-  h1,
-  h2 {
-    font-family: Verdana, Tahoma;
-  }
-  
-  h2 {
-    border-bottom: 4px solid #dfdfe2;
-    margin-top: 0px;
-    padding-top: 60px;
-  }
-  
-  .info {
-    padding: 10px 0 0 5px;
-  }
-  
-  .formrow {
-    margin-top: 30px;
-    padding: 0px 15px;
-  }
-  
-  input {
-    font-size: 1rem;
-  }
-  
-  .info label, .info input {
-    display: inline-block;
-  }
-  
-  .info input {
-    width: 50%;
-    text-align: left;
-  }
-  
-  .info label {
-    width: 10%;
-    min-width: 55px;
-    text-align: right;
-  }
-  
-  .question-block {
-    text-align: left;
-    display: block;
-    width: 100%;
-    margin-top: 20px;
-    padding-top: 5px;
-  }
-  
-  h3 {
-    margin-top: 5px;
-    padding-left: 15px;
-    font-size: 1.375rem;
-  }
-  
-  h3::before {
-    content: "Question #";
-  }
-  
-  .question {
-    border: none;
-    padding-bottom: 0;
-  }
-  
-  .answers-list {
-    list-style: none;
-    padding: 0;
-  }
-  
-  button {
-    display: block;
-    margin: 40px auto;
-    width: 40%;
-    padding: 15px;
-    font-size: 1.438rem;
-    background: #d0d0d5;
-    border: 3px solid #3b3b4f;
-  }
-  
-  footer {
-    background-color: #2a2a40;
-    display: flex;
-    justify-content: center;
-  }
-  
-  footer,
-  footer a {
-    color: #dfdfe2;
-  }
-  
-  address {
-    text-align: center;
-    padding: 0.3em;
-  }
-  
-  .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    clip-path: inset(50%);
-    white-space: nowrap;
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-    font-family: sans-serif;
-    background: #f5f6f7;
-  }
-  
-  .header {
-    text-align: center;
-    text-transform: uppercase;
-    padding: 32px;
-    background-color: #0a0a23;
-    color: #fff;
-    border-bottom: 4px solid #fdb347;
-  }
-  
-  .gallery {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 20px 10px;
-  }
-  
-  .gallery img {
-    width: 100%;
-    max-width: 350px;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 10px;
-  }
-  
-  .gallery::after {
-    content: "";
-    width: 350px;
-  }
-  .gallery::before {
-    content: "";
-    width: 350px;
-  }  */
+footer {
+  text-align: center;
+  padding: 20px;
+}
