--- a/tribute-page/tpstyles.css
+++ b/tribute-page/tpstyles.css
@@ -2,7 +2,7 @@
 
 * {
   box-sizing: border-box;
-  background-color: pink;
+  background-color: whitesmoke;
   font-family: "Roboto Flex", sans-serif;
 }
 
@@ -14,11 +14,12 @@ body {
 header {
   /* border: 10px solid #e4e4; */
   width: 100%;
-  height: 100px;
+  height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   top: 0;
+  border-bottom: 4px solid purple;
 }
 
 /* 
@@ -35,14 +36,15 @@ a {
 #logo {
   width: max(5.5rem, 5vw);
   color: purple;
-  padding: 15px;
+  padding: 10px;
   font-size: min(3vw, 1.2em);
 }
 
 nav {
   width: 100%;
   max-width: 300px;
-  height: 50px;
+  height: 20px;
+  padding: 0 10px;
 }
 
 nav ul {
@@ -57,9 +59,10 @@ nav ul {
 
 nav ul li {
   /* border: 3px solid red; */
-  margin: 0.2rem;
-  padding: 0.2rem;
+  margin: 0.1rem;
+  padding: 0.1rem;
   display: block;
+
 }
 
 nav ul li:hover {
@@ -74,6 +77,9 @@ li a {
 
 li a:hover {
   color: inherit;
+  background-color: rebeccapurple;
+  padding: 10px;
+  border-radius: 4px;
 }
 
 #main {
@@ -89,6 +95,12 @@ li a:hover {
 
 #title, section {
   width: 80%;
+  margin: 0 auto;
+}
+
+#title {
+  /* border: 5px solid green; */
+  padding: 50px 20px 20px 20px;
   margin: 0 auto;
 }
 
@@ -171,12 +183,12 @@ section #tribute-info {
   background-color:orange;
 }
 
-#personage {
+#trailblazers {
   display: block;
   margin: 0 auto;
 }
 
-#personage h2 {
+#trailblazers h2 {
   text-align: center;
   padding-top: 30px;
 }
